--- a/sidebar/lib/css/style.css
+++ b/sidebar/lib/css/style.css
@@ -5,17 +5,35 @@ body{
 /* END OF PREMADE */
 
 .main_container{
-
+    display: flex;
+    height: 100vh;
 }
 
 .sidebar{
+    background: 
+        linear-gradient( rgba(0, 0, 0, 0.45),
+                        rgba(0, 0, 0, 0.45)),
+        url(../../assets/crash.jpg);
+    background-position-x: center;
+    color: white;
+    padding-bottom: 40px;
 
+    width: 30%;
+    flex-shrink: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .sidebar img{
-
+    width: 72px;
+    filter: invert(100%);
 }
 
 .scrolling_content{
-
+    text-align: center;
+    padding: 26px;
+    overflow-y: scroll;
 }
